flux/manifests/04-apps/artificial-intelligence/mcp-servers/osv/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/refs/heads/main/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: osv-mcp-server
  namespace: osv
spec:
  parentRefs:
    - name: main-gateway
      namespace: cilium-system
      sectionName: https
  hostnames:
    - "mcp.gateway.services.apocrathia.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /osv
      backendRefs:
        - name: mcp-osv-vulnerability-scanner-proxy
          port: 8080
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /mcp
